--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dotenv": "^16.5.0",
     "genkit": "^1.7.0",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^15.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
